app/design/frontend/Travers/default/styles/blocks/_bluefoot.scss
/* ... */
.home-top-section {
    display: flex;
    margin-left: 0 !important; // override BF
    margin-right: 0 !important; // override BF

    @include max-screen($screen__m) {
        width: 100%;
        margin-top: $indent__base;

        .slick-slider {
            min-height: 0 !important; // override slick
            height: 400px;
        }
    }

    .carousel,
    .category-grid.product-category {
        width: 100% !important; // override BF desktop layout

        @include max-screen($screen__l) {
            padding: 0 !important; // override BF
            margin: 0 !important; // override BF
        }
    }

    .carousel {
        @include min-screen($screen__l) {
            width: calc(100% - #{$home-sidebar-width})
        }

        .pagebuilder-button-primary {
            @include button--type(primary);
        }

        .pagebuilder-overlay.pagebuilder-poster-overlay {
            padding: 0 15px;

            @include min-screen($screen__m) {
                justify-content: left;
                margin-left: 35px;
                padding: 0;

                .pagebuilder-poster-content {
                    width: 580px;
                    max-width: 90%;
                }
            }
        }
    }

    .sidebar-menu {
        display: none !important;

        @include min-screen($screen__l) {
            width: $home-sidebar-width !important;
            display: flex !important;
            flex-direction: column;
            background-color: $c-smoke !important;
            z-index: 2;
        }
    }

    .pagebuilder-column:not(.sidebar-menu) {
        width: 100% !important; // override PageBuilder

        @include min-screen($screen__l) {
            width: calc(100% - #{$home-sidebar-width}) !important; // override PageBuilder
        }
    }

    .section-heading-container {
        margin-left: auto;
        margin-right: auto;
    }

    .pagebuilder-slider {
        @include min-screen($screen__m) {
            min-height: 300px !important; // override PageBuilder
        }

        .pagebuilder-poster-content {
            @include max-screen($screen__m) {
                transform: translateY(250px);
                text-align: center;
                width: 100%;
                margin: 0 auto;
                color: $text__color !important; // override PageBuilder
            }
        }
    }
}

.bluefoot__categories {
    padding-left: $indent__l;
    padding-right: $indent__base;
    list-style-type: none;
    margin: 0 15px;

    li {
        margin-top: $indent__s;
        margin-bottom: $indent__s;

        &:first-of-type {
            @include max-screen($screen__m) {
                margin-top: 0;
                padding-top: $indent__s;
            }
        }

        a {
            color: $text__color;
            text-decoration: none;
            font-size: $font-size__base--desktop;
            line-height: 1.3;

            @include hover {
                text-decoration: none;
                color: $c-cobalt;
            }
        }
    }
}

.categories-accordion {
    @include min-screen($screen__m) {
        display: none !important; // override PageBuilder
    }

    &.row-full-width-inner {
        margin: 0;
    }

    &__trigger {
        border: 1px solid $c-border !important;
        margin: 0 15px;

        button {
            position: relative;
            width: 100%;
            padding: 15px $indent__m 15px $indent__xl;
            font-size: 16px;
            letter-spacing: 0;

            &::before {
                position: absolute;
                left: $indent__base;
                font-size: 28px;
            }

            &[aria-expanded="true"] {
                &::before {
                    content: "−";
                }
            }

            &[aria-expanded="false"] {
                &::before {
                    content: "+";
                }
            }
        }
    }

    .bluefoot__categories {
        margin-top: 0;
        padding-left: $indent__base;
        background-color: $c-smoke;
        border: 1px solid $c-border !important;
        border-top: 0 !important;
    }
}

div[data-content-type='tabs'] .tabs-navigation li.tab-header a.tab-title {
    padding: 15px;
}

.tab-title.active {
    display: none;
}

